test/fail/par-bad-base.mo
actor {
    func a() : async () {
        await ({ cycles = -3 } with) async ();
        await ({ cycles = "" } with) async ();
    };
};
